fix for NASACORTA-74 - Glass Head H1 .modal-header h1 remove letter space and adjust question mark popover horizontal alignment

--- a/app/css/global/_modal.scss
+++ b/app/css/global/_modal.scss
@@ -131,7 +131,6 @@ $modal-link-color:#0099cc;
 .modal-header h1 {
   margin-top: 0;
   font-size: 32px;
-  letter-spacing: 1px;
   padding-top:0;
   margin-bottom: 22px;
   font-family: $font-main;
